--- a/defaultconfig.yaml
+++ b/defaultconfig.yaml
@@ -47,7 +47,11 @@ strings:
   stats_command_reply: "Unique pictures posted: {num_unique_images:n}\nTotal image reposts: {num_image_reposts:n}\nUnique URLs posted: {num_unique_urls:n}\nTotal URL reposts: {num_url_reposts:n}"
 
   # these three strings are for the verbose callout response style
-  repost_alert: "My friend, you've posted unoriginal content!"
+  repost_alert: [
+      "And here as well!",
+      "Here it is again!",
+      "Another one right here",
+  ]
   first_repost_callout: "Look, it was here first."
   final_repost_callout: "Let's keep the reposting to a minimum mmkay, {name}?"
 
